--- a/src/main/resources/org/example/kittyfy/hello-view.fxml
+++ b/src/main/resources/org/example/kittyfy/hello-view.fxml
@@ -31,10 +31,13 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
                     </content>
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin>
                 </ScrollPane>
                 <HBox alignment="CENTER" prefHeight="230.0" prefWidth="674.0">
                     <children>
-                        <ImageView fx:id="pictures" fitHeight="232.0" fitWidth="316.0" pickOnBounds="true" preserveRatio="true"/>
+                        <ImageView fx:id="pictures" fitHeight="232.0" fitWidth="316.0" pickOnBounds="true" preserveRatio="true" />
                         <GridPane prefHeight="232.0" prefWidth="360.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
@@ -52,12 +55,12 @@
                                         <Font size="24.0" />
                                     </font>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="122.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="▶" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <Button alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" prefHeight="78.0" prefWidth="133.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="▶" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="36.0" />
                                     </font>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="127.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                <Button mnemonicParsing="false" prefHeight="78.0" prefWidth="127.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
@@ -82,11 +85,17 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
                     </content>
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin>
                 </ScrollPane>
-                <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="228.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="Create Purrlist">
+                <Button mnemonicParsing="false" prefHeight="54.0" prefWidth="225.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="Create Purrlist">
                     <font>
                         <Font size="18.0" />
                     </font>
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin>
                 </Button>
             </children>
         </VBox>
