--- a/src/main/resources/org/example/kittyfy/hello-view.fxml
+++ b/src/main/resources/org/example/kittyfy/hello-view.fxml
@@ -12,12 +12,12 @@
             <children>
                 <HBox alignment="CENTER" prefHeight="73.0" prefWidth="674.0">
                     <children>
-                        <ComboBox editable="true" prefHeight="43.0" prefWidth="394.0" promptText="Song/Artist" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;">
+                        <ComboBox editable="true" prefHeight="40.0" prefWidth="394.0" promptText="Song/Artist" style="-fx-text-fill: white; -fx-background-radius: 15;">
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
                         </ComboBox>
-                        <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="59.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="+">
+                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="50.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="+">
                             <font>
                                 <Font size="18.0" />
                             </font>
@@ -38,7 +38,7 @@
                 <HBox alignment="CENTER" prefHeight="230.0" prefWidth="674.0">
                     <children>
                         <ImageView fx:id="pictures" fitHeight="232.0" fitWidth="316.0" pickOnBounds="true" preserveRatio="true" />
-                        <GridPane prefHeight="232.0" prefWidth="360.0">
+                        <GridPane alignment="CENTER" prefHeight="75.0" prefWidth="225.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
@@ -50,27 +50,33 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Button mnemonicParsing="false" prefHeight="78.0" prefWidth="122.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&lt;&lt;" GridPane.rowIndex="1">
+                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&lt;&lt;" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
                                 </Button>
-                                <Button alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" prefHeight="78.0" prefWidth="133.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="▶" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15; -fx-padding: 2;" text="▶" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="36.0" />
                                     </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="78.0" prefWidth="127.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="79.0" prefWidth="125.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="■" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="■" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
                                 </Button>
                             </children>
+                     <HBox.margin>
+                        <Insets top="30.0" />
+                     </HBox.margin>
                         </GridPane>
                     </children>
                 </HBox>
@@ -80,21 +86,24 @@
     <right>
         <VBox prefHeight="616.0" prefWidth="224.0" BorderPane.alignment="CENTER">
             <children>
-                <Label alignment="CENTER" prefHeight="51.0" prefWidth="235.0" style="-fx-text-fill: black; -fx-font-size: 24px; -fx-font-weight: bold;" text="Purrlists" />
-                <ScrollPane prefHeight="510.0" prefWidth="224.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
+                <Label alignment="CENTER" prefHeight="51.0" prefWidth="235.0" style="-fx-text-fill: black; -fx-font-size: 24px; -fx-font-weight: bold; -fx-font-family: 'Berlin Sans FB Demi';" text="Purrlists" textAlignment="CENTER">
+               <font>
+                  <Font name="Berlin Sans FB Demi Bold" size="18.0" />
+               </font></Label>
+                <ScrollPane prefHeight="510.0" prefWidth="210.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
                     </content>
                <VBox.margin>
-                  <Insets left="20.0" />
+                  <Insets left="20.0" right="20.0" />
                </VBox.margin>
                 </ScrollPane>
-                <Button mnemonicParsing="false" prefHeight="54.0" prefWidth="225.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="Create Purrlist">
+                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="225.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="Create Purrlist" textAlignment="CENTER">
                     <font>
-                        <Font size="18.0" />
+                        <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                     </font>
                <VBox.margin>
-                  <Insets left="20.0" />
+                  <Insets left="20.0" right="20.0" />
                </VBox.margin>
                 </Button>
             </children>
