--- a/src/main/resources/org/example/kittyfy/hello-view.fxml
+++ b/src/main/resources/org/example/kittyfy/hello-view.fxml
@@ -12,12 +12,12 @@
             <children>
                 <HBox alignment="CENTER" prefHeight="73.0" prefWidth="674.0">
                     <children>
-                        <ComboBox editable="true" prefHeight="40.0" prefWidth="394.0" promptText="Song/Artist" style="-fx-text-fill: white; -fx-background-radius: 15;">
+                        <ComboBox fx:id="searchBar" editable="true" prefHeight="40.0" prefWidth="394.0" promptText="Song/Artist" style="-fx-text-fill: white; -fx-background-radius: 15;">
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
                         </ComboBox>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="50.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="+">
+                        <Button fx:id="addSong" mnemonicParsing="false" onAction="#addSongClick" prefHeight="40.0" prefWidth="50.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="+">
                             <font>
                                 <Font size="18.0" />
                             </font>
@@ -27,7 +27,7 @@
                         <Insets top="20.0" />
                     </VBox.margin>
                 </HBox>
-                <ScrollPane prefHeight="288.0" prefWidth="674.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
+                <ScrollPane fx:id="songsPane" prefHeight="288.0" prefWidth="674.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
                     </content>
@@ -50,12 +50,12 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&lt;&lt;" GridPane.rowIndex="1">
+                                <Button mnemonicParsing="false" onAction="#reset" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&lt;&lt;" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
                                 </Button>
-                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15; -fx-padding: 2;" text="▶" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#play" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15; -fx-padding: 2;" text="▶" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="36.0" />
                                     </font>
@@ -63,12 +63,12 @@
                               <Insets />
                            </GridPane.margin>
                                 </Button>
-                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#skip" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="■" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                <Button mnemonicParsing="false" onAction="#stop" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="■" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
@@ -92,13 +92,13 @@
                </font></Label>
                 <ScrollPane prefHeight="510.0" prefWidth="210.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                        <AnchorPane fx:id="playlistPane" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
                     </content>
                <VBox.margin>
                   <Insets left="20.0" right="20.0" />
                </VBox.margin>
                 </ScrollPane>
-                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="225.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="Create Purrlist" textAlignment="CENTER">
+                <Button mnemonicParsing="false" onAction="#createPlaylist" prefHeight="40.0" prefWidth="225.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="Create Purrlist" textAlignment="CENTER">
                     <font>
                         <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                     </font>
