--- a/src/main/resources/org/example/kittyfy/hello-view.fxml
+++ b/src/main/resources/org/example/kittyfy/hello-view.fxml
@@ -19,7 +19,7 @@
                         </ComboBox>
                         <Button fx:id="addSong" mnemonicParsing="false" onAction="#addSongClick" prefHeight="40.0" prefWidth="50.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="+">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="20.0" />
                             </font>
                         </Button>
                     </children>
@@ -37,47 +37,80 @@
                 </ScrollPane>
                 <HBox alignment="CENTER" prefHeight="230.0" prefWidth="674.0">
                     <children>
-                        <ImageView fx:id="pictures" fitHeight="232.0" fitWidth="316.0" pickOnBounds="true" preserveRatio="true" />
-                        <GridPane alignment="CENTER" prefHeight="75.0" prefWidth="225.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            </rowConstraints>
-                            <children>
-                                <Button mnemonicParsing="false" onAction="#reset" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&lt;&lt;" GridPane.rowIndex="1">
-                                    <font>
-                                        <Font size="24.0" />
-                                    </font>
-                                </Button>
-                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#play" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15; -fx-padding: 2;" text="▶" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                    <font>
-                                        <Font size="36.0" />
-                                    </font>
-                           <GridPane.margin>
-                              <Insets />
-                           </GridPane.margin>
-                                </Button>
-                                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#skip" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                                    <font>
-                                        <Font size="24.0" />
-                                    </font>
-                                </Button>
-                                <Button mnemonicParsing="false" onAction="#stop" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="■" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                    <font>
-                                        <Font size="24.0" />
-                                    </font>
-                                </Button>
-                            </children>
+                        <ImageView fx:id="pictures" fitHeight="232.0" fitWidth="316.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
-                        <Insets top="30.0" />
-                     </HBox.margin>
-                        </GridPane>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin></ImageView>
+                  <VBox prefHeight="253.0" prefWidth="371.0">
+                     <children>
+                        <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" prefHeight="51.0" prefWidth="367.0" text="Song Titel" textAlignment="CENTER">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="16.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="20.0" />
+                           </VBox.margin></Label>
+                        <Label alignment="CENTER" prefHeight="51.0" prefWidth="359.0" text="Artist Name">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="20.0" />
+                           </VBox.margin>
+                        </Label>
+                              <GridPane alignment="CENTER" prefHeight="199.0" prefWidth="532.0">
+                                  <columnConstraints>
+                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+                                  </columnConstraints>
+                                  <rowConstraints>
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  </rowConstraints>
+                                  <children>
+                                      <Button mnemonicParsing="false" onAction="#reset" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&lt;&lt;">
+                                          <font>
+                                              <Font size="24.0" />
+                                          </font>
+                                 <GridPane.margin>
+                                    <Insets left="40.0" />
+                                 </GridPane.margin>
+                                      </Button>
+                                      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#play" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15; -fx-padding: 2;" text="▶" GridPane.columnIndex="1">
+                                          <font>
+                                              <Font size="36.0" />
+                                          </font>
+                                 <GridPane.margin>
+                                    <Insets left="20.0" />
+                                 </GridPane.margin>
+                                      </Button>
+                                      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#skip" prefHeight="40.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="&gt;&gt;" GridPane.columnIndex="2">
+                                          <font>
+                                              <Font size="24.0" />
+                                          </font>
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                                      </Button>
+                                      <Button alignment="CENTER" mnemonicParsing="false" onAction="#stop" prefHeight="50.0" prefWidth="75.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="■" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <font>
+                                              <Font size="24.0" />
+                                          </font>
+                                 <GridPane.margin>
+                                    <Insets bottom="20.0" left="20.0" />
+                                 </GridPane.margin>
+                                      </Button>
+                                  </children>
+                           <padding>
+                              <Insets bottom="20.0" top="20.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets left="20.0" />
+                           </VBox.margin>
+                              </GridPane>
+                     </children>
+                  </VBox>
                     </children>
                 </HBox>
             </children>
@@ -90,9 +123,9 @@
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                </font></Label>
-                <ScrollPane prefHeight="510.0" prefWidth="210.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
+                <ScrollPane fx:id="playlistPane" prefHeight="510.0" prefWidth="210.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
                     <content>
-                        <AnchorPane fx:id="playlistPane" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
                     </content>
                <VBox.margin>
                   <Insets left="20.0" right="20.0" />
