--- a/src/main/resources/org/example/kittyfy/Create-Playlist.fxml
+++ b/src/main/resources/org/example/kittyfy/Create-Playlist.fxml
@@ -10,18 +10,18 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(to bottom, #FF8000, #FFB366);" BorderPane.alignment="CENTER">
          <children>
-            <TextField prefHeight="40.0" prefWidth="405.0" promptText="Playlist name">
+            <TextField fx:id="playlistName" prefHeight="40.0" prefWidth="405.0" promptText="Playlist name">
                <VBox.margin>
                   <Insets left="130.0" right="114.0" top="30.0" />
                </VBox.margin>
             </TextField>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <ComboBox prefHeight="40.0" prefWidth="343.0" promptText="Song/Artist">
+                  <ComboBox fx:id="searchbarPlaylist" prefHeight="40.0" prefWidth="343.0" promptText="Song/Artist">
                      <HBox.margin>
                         <Insets bottom="30.0" left="130.0" top="30.0" />
                      </HBox.margin></ComboBox>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="63.0" text="+">
+                  <Button mnemonicParsing="false" onAction="#addSongPlaylist" prefHeight="40.0" prefWidth="63.0" text="+">
                      <HBox.margin>
                         <Insets top="30.0" />
                      </HBox.margin>
@@ -31,14 +31,14 @@
                   </Button>
                </children>
             </HBox>
-            <ChoiceBox prefHeight="40.0" prefWidth="408.0">
+            <ChoiceBox fx:id="choosePictures" prefHeight="40.0" prefWidth="408.0">
                <VBox.margin>
                   <Insets bottom="30.0" left="130.0" />
                </VBox.margin>
             </ChoiceBox>
             <HBox prefHeight="71.0" prefWidth="650.0">
                <children>
-                  <Button minHeight="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="95.0" text="Cancel ">
+                  <Button minHeight="40.0" mnemonicParsing="false" onAction="#cancel" prefHeight="40.0" prefWidth="95.0" text="Cancel ">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -46,7 +46,7 @@
                         <Insets left="130.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="95.0" text="Create">
+                  <Button mnemonicParsing="false" onAction="#createPlaylist" prefHeight="40.0" prefWidth="95.0" text="Create">
                      <font>
                         <Font size="14.0" />
                      </font>
