--- a/src/main/resources/org/example/kittyfy/hello-view.fxml
+++ b/src/main/resources/org/example/kittyfy/hello-view.fxml
@@ -70,11 +70,24 @@
                               <Insets left="20.0" />
                            </VBox.margin>
                         </Label>
-                        <ProgressBar fx:id="ProgressBar" prefHeight="35.0" prefWidth="361.0" progress="0.0" VBox.vgrow="ALWAYS">
+                        <HBox prefHeight="18.0" prefWidth="355.0">
+                           <children>
+                              <Label maxHeight="18.0" maxWidth="25.0" prefHeight="18.0" prefWidth="25.0" text="0:00">
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <ProgressBar fx:id="progressBar" prefHeight="18.0" prefWidth="288.0" progress="0.0">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </ProgressBar>
+                              <Label fx:id="durationLabel" maxHeight="18.0" maxWidth="25.0" prefHeight="18.0" prefWidth="25.0" />
+                           </children>
                            <VBox.margin>
-                              <Insets left="20.0" />
+                              <Insets />
                            </VBox.margin>
-                        </ProgressBar>
+                        </HBox>
                               <GridPane alignment="CENTER" prefHeight="199.0" prefWidth="532.0">
                                   <columnConstraints>
                                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
